--- a/src/admin/scss/dashboard.scss
+++ b/src/admin/scss/dashboard.scss
@@ -39,6 +39,7 @@
 .pi-inv .pi-from-logo img {
     max-width: 200px !important;
     max-height: 80px;
+    border-radius: 10px;
 }
 
 .wp-admin .pi-left-sidebar,
@@ -156,7 +157,7 @@ input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
     -webkit-box-shadow: 0 0 0 30px white inset !important;
-} 
+}
 
 // preloader
 .pi-preloader {
@@ -183,7 +184,9 @@ input:-webkit-autofill:active {
 @keyframes pi-rotation {
     from {
         transform: rotate(0deg);
-    } to {
+    }
+
+    to {
         transform: rotate(359deg);
     }
 }
