--- a/src/admin/js/react/components/invoice/single/style.scoped.scss
+++ b/src/admin/js/react/components/invoice/single/style.scoped.scss
@@ -3,22 +3,18 @@
   z-index: 10;
   position: relative;
 }
-
 .ncpi .pi-single-tab-content .pi-page-title {
   margin-bottom: 55px;
 }
-
 @media screen and (max-width: 992px) {
   .ncpi .pi-single-tab-content .pi-page-title {
     margin-bottom: 30px;
     margin-top: 50px;
   }
 }
-
 .ncpi .pi-single-image-content {
   position: relative;
 }
-
 .ncpi .pi-single-image {
   opacity: 1;
   display: block;
@@ -26,16 +22,14 @@
   height: auto;
   transition: 0.5s ease;
   -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
+          backface-visibility: hidden;
   border-radius: 15px !important;
-  border: 1px solid var(--border-color-gray);
+  border: 1px solid var(--pi-border-color-gray);
 }
-
 .ncpi .pi-single-image.pi-active {
-  border: 5px solid var(--bg-color-blue);
+  border: 5px solid var(--pi-bg-color-blue);
   border-radius: 15px;
 }
-
 .ncpi .pi-overflow-content {
   transition: 0.5s ease;
   opacity: 0;
@@ -47,22 +41,18 @@
   text-align: center;
   width: 100%;
   height: 100%;
-  background-color: rgba(10, 10, 10, 0.2784313725);
+  background-color: #0a0a0a47;
   border-radius: 15px;
 }
-
 .ncpi .pi-single-image-content:hover .pi-single-image {
   opacity: 0.3;
 }
-
 .ncpi .pi-single-image-content:hover .pi-active {
   opacity: 1 !important;
 }
-
 .ncpi .pi-single-image-content:hover .pi-overflow-content {
   opacity: 1;
 }
-
 .ncpi .pi-single-image-content a {
   transform: translateY(-113%);
   display: block;
@@ -75,18 +65,15 @@
   font-weight: 500;
   border-radius: 5px;
 }
-
 .ncpi .pi-single-image-content .pi-bg-hover-blue:hover {
   background-color: #4e6de9 !important;
-  color: var(--bg-color-white);
+  color: var(--pi-bg-color-white);
 }
-
 .ncpi .pi-single-image-content a:last-child {
-  background-color: var(--bg-color-white) !important;
+  background-color: var(--pi-bg-color-white) !important;
   color: #2D3748;
   margin-top: 10px;
 }
-
 .ncpi .pi-invoice-tab-content .pi-modal-content {
   margin: 75px auto;
 }
@@ -95,42 +82,35 @@
   padding: 35px 30px;
   border-radius: 8px;
 }
-
 @media screen and (max-width: 550px) {
   .ncpi .pi-info-content {
     padding: 20px 15px;
   }
 }
-
 .ncpi .pi-add-info-content {
   margin-bottom: 20px;
 }
-
 .ncpi .pi-add-info-content h3 {
   font-size: 24px;
   font-weight: 700;
   margin-bottom: 5px;
 }
-
 .ncpi .pi-add-info-content .pi-info-content {
   padding: 30px 45px 45px;
   border-radius: 20px;
 }
-
 @media screen and (max-width: 550px) {
   .ncpi .pi-add-info-content .pi-info-lavel {
     width: 110px;
   }
 }
-
 .ncpi .pi-add-info-content input[type=number],
 .ncpi .pi-add-info-content input[type=text] {
   padding: 12px 6px !important;
-  border: 1px solid var(--border-color-gray);
+  border: 1px solid var(--pi-border-color-gray);
   border-radius: 4px;
   font-size: 10px;
 }
-
 .ncpi .pi-add-info-content label {
   padding: 9px 12px 12px 0;
   display: inline-block;
@@ -138,18 +118,16 @@
   color: #4A5568;
   margin-bottom: 0;
 }
-
 .ncpi .pi-add-info-content .pi-info-input-field {
   position: relative;
   width: 135px;
 }
-
 .ncpi .pi-add-info-content .pi-info-input-field .pi-calendar {
   position: absolute;
   top: 1px;
   right: 1px;
   padding: 10px 7px;
-  border-left: 1px solid var(--border-color-gray);
+  border-left: 1px solid var(--pi-border-color-gray);
   cursor: pointer;
   text-align: center;
   background: linear-gradient(180deg, #FFFFFF 0%, #F8F8FA 100%);
@@ -157,31 +135,26 @@
   align-items: center;
   border-radius: 0 5px 5px 0;
 }
-
 @media screen and (max-width: 550px) {
   .ncpi .pi-add-info-content .pi-info-input-field .pi-calendar {
     padding: 8px 7px;
   }
 }
-
 .ncpi .pi-add-info-content .pi-info-form-list {
   display: flex;
   margin-bottom: 10px;
   justify-content: right;
 }
-
 @media screen and (max-width: 550px) {
   .ncpi .pi-add-info-content .pi-info-form-list {
     justify-content: center;
   }
 }
-
 .ncpi .pi-info-logo {
   position: relative;
   top: 50%;
   transform: translatey(-49%);
 }
-
 .ncpi .pi-info-logo .pi-upload {
   font-weight: 500;
   border: 1px dashed #718096;
@@ -193,20 +166,17 @@
   background: #FAFAFA;
   overflow: hidden;
 }
-
 @media screen and (max-width: 550px) {
   .ncpi .pi-info-logo .pi-upload {
     width: 135px;
   }
 }
-
 .ncpi .pi-info-logo .pi-upload p {
   font-size: 14px;
   color: #718096;
   font-weight: 500;
   margin-top: 5px;
 }
-
 .ncpi .pi-info-logo input[type=file] {
   position: absolute;
   cursor: pointer;
@@ -217,7 +187,6 @@
   width: 130px;
   height: 130px;
 }
-
 @media screen and (max-width: 550px) {
   .ncpi .pi-info-content .pi-info-logo {
     display: flex;
@@ -225,32 +194,26 @@
     margin-bottom: 50px;
   }
 }
-
 @media screen and (max-width: 500px) {
   .ncpi .pi-add-info-content {
     padding: 25px 25px;
   }
 }
-
 .ncpi .pi-from-content {
   padding: 40px 35px 35px;
   background: rgba(231, 236, 254, 0.26);
   border-radius: 10px;
 }
-
 .ncpi .pi-from-content .pi-to {
   margin-left: auto;
 }
-
 .ncpi .pi-from-content .pi-from-to-content {
   display: flex;
   justify-content: space-between;
 }
-
 .ncpi .pi-from-content .pi-from-to {
   max-width: 310px;
 }
-
 .ncpi .pi-from-content .pi-from-to label {
   font-size: 14px;
   display: block;
@@ -258,13 +221,11 @@
   margin-bottom: 15px;
   font-weight: 500;
 }
-
 .ncpi .pi-from-content .pi-from-to .pi-sendlist {
   display: flex;
   justify-content: right;
   align-items: center;
 }
-
 .ncpi .pi-from-content .pi-from-to .pi-sendlist .pi-list {
   cursor: pointer;
   padding: 10px 15px;
@@ -273,32 +234,27 @@
   left: -10px;
   margin-top: -15px;
 }
-
 .ncpi .pi-from-content .pi-from-to .pi-sendlist .pi-list svg {
   margin-top: 6px;
   float: right;
   position: absolute;
   margin-left: 15px;
 }
-
 .ncpi .pi-from-content .pi-title-small {
   font-weight: 700;
   margin-top: 0;
   margin-bottom: 5px;
 }
-
 .ncpi .pi-from-content .pi-title-small span {
   float: right;
   cursor: pointer;
   margin-top: -2px;
 }
-
 .ncpi .pi-from-content .pi-from {
   padding: 16px 15px 20px 20px;
   border-radius: 8px;
   border: 1px solid #CBD5E0;
 }
-
 .ncpi .pi-from-content .pi-dropdown-content {
   top: 25px;
   right: -20px;
@@ -306,15 +262,12 @@
   border: 1px solid rgba(221, 221, 221, 0.6588235294);
   text-align: left;
 }
-
 .ncpi .pi-from-content .pi-dropdown-content a:hover {
   color: #4c6fff;
 }
-
 .ncpi .pi-from-content .pi-dropdown-content a {
   color: #4A5568;
 }
-
 .ncpi .pi-from-content address {
   font-size: 14px;
   font-style: normal;
@@ -326,7 +279,6 @@
 .pi-border-right {
   position: relative;
 }
-
 .pi-border-right:before {
   content: "";
   height: 100%;
@@ -336,7 +288,6 @@
   border: 1px dashed #CBD5E0;
   top: 0px;
 }
-
 @media screen and (max-width: 550px) {
   .pi-border-right:before {
     border: 0;
@@ -344,9 +295,8 @@
 }
 
 @media screen and (max-width: 550px) {
-
   .pi-to,
-  .pi-from-to {
+.pi-from-to {
     max-width: 100% !important;
     float: none !important;
   }
@@ -359,17 +309,14 @@
     padding: 20px 15px !important;
   }
 }
-
 .ncpi .pi-inv-sections .pi-group-input {
   position: relative;
 }
-
 .ncpi .pi-inv-sections .pi-group-input label {
   font-size: 14px;
   font-weight: 600;
   color: #2D3748;
 }
-
 .ncpi .pi-inv-sections .pi-group-input label svg {
   margin-left: 5px;
   cursor: pointer;
@@ -377,13 +324,11 @@
   top: 4px;
   position: relative;
 }
-
 .ncpi .pi-inv-sections .pi-group-input textarea {
   margin-bottom: 25px;
   color: #718096;
   font-size: 12px;
 }
-
 .ncpi .pi-inv-sections .pi-group-input .pi-field-label .pi-close-icon {
   position: absolute;
   right: 0px;
@@ -391,41 +336,34 @@
   padding: 5px 10px;
   cursor: pointer;
 }
-
 .ncpi .pi-inv-sections .pi-group-input input {
   width: 50%;
   font-weight: 600;
   margin-bottom: 10px;
 }
-
 .ncpi .pi-inv-sections .pi-group-input input::-moz-placeholder {
   color: #2D3748 !important;
   font-weight: 600;
 }
-
 .ncpi .pi-inv-sections .pi-group-input input:-ms-input-placeholder {
   color: #2D3748 !important;
   font-weight: 600;
 }
-
 .ncpi .pi-inv-sections .pi-group-input input::placeholder {
   color: #2D3748 !important;
   font-weight: 600;
 }
-
 .ncpi .pi-right-sidebar h2.pi-title-medium {
   margin-bottom: 15px;
   margin-top: 80px;
   font-size: 20px;
   color: #4A5568;
 }
-
 .ncpi .pi-right-sidebar .pi-invoice-image {
   border: 1px solid #718096;
   border-radius: 10px;
   width: 100%;
 }
-
 .ncpi .pi-right-content {
   background-color: #f1f1f7;
 }
