--- a/src/admin/scss/dashboard.scss
+++ b/src/admin/scss/dashboard.scss
@@ -134,9 +134,9 @@
         height: auto !important;
     }
 
-    /* .pi-board-content {
-        height: calc(100vh - 404px);
-    } */
+    .pi-board-content {
+        height: calc(100vh - 587px);
+    }
 }
 
 .ncpi {
@@ -146,7 +146,7 @@
     }
 
     .pi-board-content {
-        height: calc(100vh - 396px);
+        height: calc(100vh - 538px);
     }
 }
 
