working with pro

--- a/src/admin/scss/dashboard.scss
+++ b/src/admin/scss/dashboard.scss
@@ -132,6 +132,9 @@
 
     .pi-right-content {
         height: auto !important;
+        .pi-right-content-data {
+            padding: 55px 70px;
+        }
     }
 
     .pi-board-content {
