--- a/src/admin/scss/dashboard.scss
+++ b/src/admin/scss/dashboard.scss
@@ -131,7 +131,7 @@
     background-color: #f7f8fa !important;
 
     .pi-right-content {
-        height: auto !important;
+        // height: auto !important;
         .pi-right-content-data {
             padding: 55px 70px;
         }
@@ -194,4 +194,14 @@ input:-webkit-autofill:active {
 // toastify not showing in modal submit error
 .Toastify__toast-container {
     z-index: 999999 !important;
+}
+
+.pi-pro-label {
+    color: #fff;
+    background-color: #f16063;
+    font-size: 10px;
+    font-weight: 500;
+    padding: 5px 10px;
+    margin-left: 5px;
+    border-radius: 5px;
 }
