scroll probelem solbe

--- a/src/admin/scss/dashboard.scss
+++ b/src/admin/scss/dashboard.scss
@@ -132,7 +132,8 @@
     background-color: #f7f8fa !important;
 
     .pi-right-content {
-        height: auto !important;
+
+        // height: auto !important;
         .pi-right-content-data {
             padding: 55px 70px;
         }
