--- a/src/admin/scss/partials/_list-single.scss
+++ b/src/admin/scss/partials/_list-single.scss
@@ -29,6 +29,7 @@
   margin-bottom: 5px;
   font-size: 10px;
   margin-top: 4px;
+  height: max-content;
 }
 
 .ncpi .pi-list-single-head .pi-list-content .logo {
@@ -142,7 +143,7 @@
 
 .ncpi .pi-list-single-button-content .pi-action-btn .pi-dropdown-content {
   margin-top: 3px;
-  left: -70px;
+  left: -80px;
 }
 
 @media screen and (max-width: 992px) {
