--- a/src/admin/scss/partials/_list-single.scss
+++ b/src/admin/scss/partials/_list-single.scss
@@ -1,7 +1,7 @@
 .ncpi .pi-list-single-head {
   background-color: #fff;
   padding: 30px;
-  border: 1px solid #dddddda8;
+  border: 1px solid rgba(221, 221, 221, 0.6588235294);
   border-radius: 8px 8px 0 0;
 }
 
@@ -24,7 +24,7 @@
 }
 
 .ncpi .pi-list-single-head .pi-list-content h3 .pi-btn {
-  border: 1px solid #dddddda8;
+  border: 1px solid rgba(221, 221, 221, 0.6588235294);
   margin-left: 20px;
   margin-bottom: 5px;
   font-size: 10px;
@@ -53,7 +53,7 @@
 }
 
 .ncpi .pi-list-single-head .pi-edit-btn .pi-btn {
-  border: 1px solid #dddddda8;
+  border: 1px solid rgba(221, 221, 221, 0.6588235294);
   padding: 5px 12px !important;
 }
 
@@ -157,7 +157,7 @@
 .ncpi .pi-tag-content {
   padding: 30px;
   background-color: #fff;
-  border: 1px solid #dddddda8;
+  border: 1px solid rgba(221, 221, 221, 0.6588235294);
   border-top: none;
   border-radius: 0 0 8px 8px;
 }
@@ -263,7 +263,7 @@
 }
 
 .ncpi .pi-tag-content ul .pi-action-content .pi-btn {
-  border: 1px solid #dddddda8;
+  border: 1px solid rgba(221, 221, 221, 0.6588235294);
   padding: 3px 10px !important;
   color: #718096 !important;
   line-height: 100%;
@@ -306,7 +306,7 @@
 }
 
 .ncpi .pi-tab-buttons-group {
-  border: 1px solid #dddddda8;
+  border: 1px solid rgba(221, 221, 221, 0.6588235294);
   padding: 5px 10px 10px;
   border-radius: 8px;
   background-color: #fff;
@@ -396,7 +396,7 @@
 .ncpi .pi-small-button-group .pi-btn-small {
   color: #718096 !important;
   font-weight: 500;
-  border: 1px solid #dddddda8;
+  border: 1px solid rgba(221, 221, 221, 0.6588235294);
   margin-right: 5px;
 }
 
@@ -515,7 +515,7 @@
 
 .ncpi .pi-board-column .pi-board-column-item {
   background-color: #fff;
-  border: 1px solid #dddddda8;
+  border: 1px solid rgba(221, 221, 221, 0.6588235294);
   border-radius: 8px;
   margin-bottom: 15px;
 }
